<resources>
    <string name="app_name">QuickDoctor</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="loginfb">LOGIN WITH FACEBOOK</string>
    <string name="signUp">Sign up</string>
    <string name="forgetPassword">Forget password?</string>
    <string name="title_activity_main3">Main3Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_chat">Start Chat</string>
    <string name="chat_history">Chat History</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="add_appointment">Add appointment</string>
    <string name="get_appointments">My appointments</string>
    <string name="search_hospital">Search Hospital</string>

</resources>
