<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.auth.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/loginHeight"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/loginMargins"
        android:width="@dimen/loginWeight"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/loginHeight"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/loginMargins"
        android:width="@dimen/loginWeight"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="@dimen/loginWeight"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/loginMargins"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="@dimen/loginWeight"
        android:layout_height="@dimen/loginHeight"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/loginMargins"
        android:contextClickable="true"
        android:gravity="center"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="@dimen/loginWeight"
        android:layout_height="@dimen/loginHeight"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/forgetPassword" />
    </LinearLayout>
</ScrollView>