<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.cardview.widget.CardView
                android:id="@+id/historyChat"
                android:layout_width="116dp"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/historyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_history" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.cardview.widget.CardView
                android:id="@+id/startChat"
                android:layout_width="116dp"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_chat" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.cardview.widget.CardView
                android:id="@+id/appointment"
                android:layout_width="116dp"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/appointmentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_appointment" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/allAppointment"
            android:layout_width="116dp"
            android:layout_height="99dp">

        <TextView
            android:id="@+id/allApointmentT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_appointments" />
        </androidx.cardview.widget.CardView>
        </TableRow>
    </TableLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>